# SteelMC

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  clippy.toml  crates.js  docker-compose.yml  help.html  prek.toml  rustc-ice-2026-03-31T12_31_35-8608.txt  rustc-ice-2026-03-31T12_32_24-5220.txt  rustc-ice-2026-03-31T17_22_48-12012.txt  rustc-ice-2026-03-31T17_23_00-14528.txt  rustc-ice-2026-04-01T10_11_16-13964.txt  rustfmt.toml  settings.html  src-files.js  update-minecraft-src.sh
steel/: Cargo.toml  all.html  constant.MC_VERSION.html  enum.SteelServerError.html  index.html  sidebar-items.js  static.SERVER.html  struct.SteelServer.html
steel-core/: Cargo.toml
steel-core/benches/: chunk_noise.rs  worldgen.rs
steel-core/src/: compat_traits.rs  config.rs  enchantment_helper.rs  entity.rs  lib.rs  saved_data.rs  scoreboard.rs
steel-core/src/behavior/: block.rs  context.rs  fluid.rs  item.rs  item_utils.rs  mod.rs
steel-core/src/block_entity/: mod.rs  registry.rs  storage.rs
steel-core/src/chunk/: aquifer.rs  beardifier.rs  chunk_access.rs  chunk_generation_task.rs  chunk_generator.rs  chunk_holder.rs  chunk_level.rs  chunk_map.rs  chunk_packet_data.rs  chunk_pyramid.rs  chunk_request.rs  chunk_status_tasks.rs  chunk_ticket_manager.rs  chunk_tracker.rs  chunk_tracking_view.rs  distance_manager.rs  empty_chunk_generator.rs  flat_chunk_generator.rs  heightmap.rs  level_chunk.rs  mod.rs  noise_chunk.rs  ore_veinifier.rs  paletted_container.rs  player_chunk_view.rs  proto_chunk.rs  section.rs  surface_system.rs  ticket.rs  vanilla_generator.rs  world_gen_context.rs
steel-core/src/chunk_saver/: bit_pack.rs  format.rs  mod.rs  ram_only.rs  region_manager.rs  registry.rs  storage.rs
steel-core/src/command/: api.rs  context.rs  error.rs  mod.rs  pending_execution.rs  protocol.rs  (+4 more)
steel-core/test_assets/: biome_hashes.json  chunk_stage_hashes.json  structure_starts.json
steel-core/tests/: biome_hashes.rs  chunk_stage_hashes.rs  command_api.rs  experience.rs  structure_starts.rs
steel-crypto/: Cargo.toml
steel-crypto/src/: key_store.rs  lib.rs  mojang_api.rs  rsa_utils.rs  signature.rs
steel-login/: Cargo.toml
steel-login/src/: authentication.rs  connection.rs  lib.rs  login.rs  tcp_client.rs
steel-protocol/: Cargo.toml
steel-protocol/src/: lib.rs  packet_reader.rs  packet_traits.rs  packet_writer.rs  utils.rs
steel-registry/: Cargo.toml
steel-registry/build_assets/: attributes.json  block_entities.json  blocks.json  data_components.json  entities.json  entity_data_serializers.json  fluids.json  game_events.json  game_rules.json  items.json  level_events.json  map_decoration_types.json  menutypes.json  mob_effects.json  multi_noise_biome_source_parameters.json  packets.json  particle_types.json  poi_types.json  position_source_types.json  potions.json  properties.json  sound_events.json  sound_types.json  tags.json  villager_professions.json  villager_types.json
steel-registry/src/: attribute.rs  banner_pattern.rs  behaviour.rs  biome.rs  block_entity_type.rs  blocks.rs  carver.rs  cat_sound_variant.rs  cat_variant.rs  chat_type.rs  chicken_sound_variant.rs  chicken_variant.rs  compat_traits.rs  consume_effect.rs  cow_sound_variant.rs  cow_variant.rs  damage_type.rs  data_component_predicate.rs  dialog.rs  dimension_type.rs  dye_color.rs  enchantment.rs  enchantment_effect.rs  entity_type.rs  entity_types.rs  entity_variant.rs  equipment.rs  feature.rs  frog_variant.rs  game_events.rs  game_rules.rs  holder.rs  holder_set.rs  instrument.rs  item_predicate.rs  item_stack.rs  item_stack_template.rs  items.rs  jukebox_song.rs  lib.rs  (+30 more)
steel-utils/: Cargo.toml
steel-utils/benches/: legacy_random.rs  xoroshiro.rs
steel-utils/src/: block_util.rs  color.rs  direction.rs  downcast.rs  front_vec.rs  geometry.rs  hash.rs  java.rs  lib.rs  locks.rs  nbt.rs  registry.rs  rotation.rs  saved_data.rs  surface.rs  types.rs  uuid_ext.rs  value_providers.rs
steel-utils/tests/: downcast.rs
steel-world/: Cargo.toml
steel-world/src/: lib.rs  section.rs
steel-worldgen/: Cargo.toml
steel-worldgen/benches/: jigsaw_assembly.rs
steel-worldgen/src/: lib.rs  state_resolver.rs  surface.rs  utils.rs
steel/config/: constant.DEFAULT_CONFIG.html  constant.DEFAULT_FAVICON.html  constant.DEFAULT_GROUPS.html  constant.DEFAULT_WORLDS.html  constant.GROUPS_CONFIG_HEADER.html  constant.ICON_PREFIX.html  constant.MC_VERSION.html  enum.ConfigLabel.html  enum.LogLevel.html  enum.LogTimeFormat.html  enum.RotationTimeFormat.html  fn.default_log_file.html  fn.default_log_path.html  fn.default_max_history.html  fn.default_spam_threshold_seconds.html  fn.empty_worlds_config.html  fn.init_steel_core_config.html  fn.load_favicon.html  fn.load_or_create.html  fn.load_or_create_groups.html  fn.load_or_create_worlds.html  fn.permission_metadata_value_toml.html  fn.push_group_config.html  fn.push_metadata_rules.html  fn.push_string_array_field.html  fn.push_toml_field.html  fn.serialize_groups_config.html  fn.toml_value.html  fn.validate.html  fn.write_atomic_config.html  index.html  sidebar-items.js  static.STEEL_CONFIG.html  struct.ConfigLink.html  struct.ExtendedConfig.html  struct.FilePermissionGroupStore.html  struct.LogConfig.html  struct.ServerConfig.html  struct.ServerConfigRef.html  struct.ServerLinks.html  (+2 more)
steel/logger/: enum.Move.html  fn.normalize_terminal_newlines.html  fn.rendered_terminal_rows.html  fn.terminal_height.html  fn.terminal_width.html  index.html  sidebar-items.js  struct.CommandLogger.html  struct.LoggerLayer.html
steel/network/: index.html  sidebar-items.js  struct.JavaTcpClient.html
steel/spawn_progress/: constant.DEPENDENCY_MARGIN.html  constant.DISPLAY_DIAMETER.html  constant.DISPLAY_RADIUS.html  constant.SPAWN_RADIUS.html  constant.TOTAL_SPAWN_CHUNKS.html  fn.count_full_chunks.html  fn.generate_pregen.html  fn.generate_spawn_chunks.html  fn.generate_with_display.html  fn.get_pregen_radius.html  index.html  sidebar-items.js  struct.SwitchableWriter.html
steel/src/: config.rs  lib.rs  main.rs
(+63199 files in other folders)
