cargo-features = ["codegen-backend"]
[workspace]
resolver = "2"
members = [
    "steel",
    "steel-macros",
    "steel-protocol",
    "steel-registry",
    "steel-utils",
    "steel-core",
    "steel-crypto",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.48", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "fs",
    "io-util",
    "time",
    "signal",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
scc = { version = "3.4.6" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
proc-macro2 = "1.0.101"
quote = "1.0.41"
crossbeam = "0.8.4"
uuid = { version = "1.19", features = ["serde", "v4"] }
log = "0.4.29"
simdnbt = "0.8.0"
enum_dispatch = "0.3.13"
anyhow = "1.0.100"
parking_lot = { version = "0.12.5", features = ["nightly"] }
rayon = "1.11.0"
wincode = { version = "0.2.2", features = ["derive"] }
rustc-hash = "2.1.1"
reqwest = { version = "0.12.24", features = [
    "json",
    "rustls-tls",
], default-features = false }
rand = "0.10.0-rc.5"
rsa = { version = "0.10.0-rc.10", features = ["sha2"] }
arc-swap = "1.7.1"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[profile.dev]
debug = 0
#codegen-backend = "cranelift"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
#cargo = { level = "warn", priority = 2 }
unwrap_used = { level = "warn", priority = -3 }
