cargo-features = ["codegen-backend"]
[workspace]
resolver = "2"
members = [
    "steel",
    "steel-macros",
    "steel-protocol",
    "steel-registry",
    "steel-utils",
    "steel-core",
    "steel-crypto",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
steel-core = { path = "steel-core" }
steel-crypto = { path = "steel-crypto" }
steel-macros = { path = "steel-macros" }
steel-protocol = { path = "steel-protocol" }
steel-registry = { path = "steel-registry" }
steel-utils = { path = "steel-utils" }

# Async runtime
tokio = { version = "1.48", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "fs",
    "io-util",
    "time",
    "signal",
] }
tokio-util = { version = "0.7.17", features = ["rt"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_json5 = "0.2.1"
simdnbt = "0.9.0"
wincode = { version = "0.2.5", features = ["derive"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Proc macros
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = "2.0.112"

# Concurrency
crossbeam = "0.8.4"
parking_lot = { version = "0.12.5", features = ["nightly", "arc_lock"] }
rayon = "1.11.0"
scc = "3.4.8"
arc-swap = "1.8.0"

# Data structures
rustc-hash = "2.1.1"
smallvec = "1.15.1"
bitflags = "2.10.0"
phf = { version = "0.13.1", features = ["macros"] }

# UUID
uuid = { version = "1.19", features = ["serde", "v4"] }

# Logging
log = "0.4.29"
simplelog = "0.12.2"

# Networking
reqwest = { version = "0.13.1", features = [
    "json",
    "rustls",
], default-features = false }

# Cryptography
rsa = { version = "0.10.0-rc.10", features = ["sha2"] }
rand = "0.10.0-rc.5"
aes = "0.9.0-rc.2"
cfb8 = "0.9.0-rc.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
md5 = "0.8.0"
base64 = "0.22.1"
hex = "0.4.3"
rsa-der = "0.3.0"

# Compression
async-compression = { version = "0.4.36", features = ["tokio", "zlib"] }
zstd = "0.13"

# Utilities
enum_dispatch = "0.3.13"
num-traits = "0.2.19"
replace_with = { version = "0.1.8", features = ["nightly"] }

heck = "0.5.0"

# Build dependencies
phf_codegen = "0.13.1"

# Dev/Bench dependencies
criterion = "0.8.1"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[profile.dev]
debug = 0
#codegen-backend = "cranelift"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
#cargo = { level = "warn", priority = 2 }
unwrap_used = { level = "warn", priority = -3 }
