[package]
name = "steel-core"
version.workspace = true
edition.workspace = true

[features]
#default = ["stand-alone"]
stand-alone = []

[dependencies]
steel-utils = { path = "../steel-utils" }
steel-protocol = { path = "../steel-protocol" }
steel-registry = { path = "../steel-registry" }
scc.workspace = true
uuid.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
log.workspace = true
replace_with = { version = "0.1.8", features = ["nightly"] }
rsa = "0.10.0-rc.9"
rsa-der = "0.3.0"
rand = "0.9.2"
serde_json5 = "0.2.1"
base64 = "0.22.1"
futures = "0.3.31"
parking_lot.workspace = true
enum_dispatch.workspace = true
anyhow.workspace = true
rustc-hash = "2.1.1"
rayon.workspace = true
indexmap = "2.12.1"

[lints]
workspace = true
