[package]
name = "steel-core"
version.workspace = true
edition.workspace = true

[features]
#default = ["stand-alone"]
stand-alone = []

[dependencies]
# Internal crates
steel-crypto.workspace = true
steel-protocol.workspace = true
steel-registry.workspace = true
steel-utils.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json5.workspace = true
wincode.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Concurrency
crossbeam.workspace = true
parking_lot.workspace = true
rayon.workspace = true
scc.workspace = true
arc-swap.workspace = true

# Data structures
rustc-hash.workspace = true
smallvec.workspace = true

# UUID
uuid.workspace = true

# Logging
log.workspace = true

# Cryptography
rsa.workspace = true
rand.workspace = true

# Compression
zstd.workspace = true

# Utilities
enum_dispatch.workspace = true
replace_with.workspace = true

[lints]
workspace = true
