[package]
name = "steel-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa = { version = "0.10.0-rc.9", features = ["sha2"] }
base64 = "0.22"
thiserror = "2.0"
rand = "0.9"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
log = "0.4"
