[package]
name = "steel-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa.workspace = true
base64 = "0.22"
thiserror = "2.0"
rand = { version = "0.10.0-rc.5" }
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
log = "0.4"
rsa-der = "0.3.0"
