[package]
name = "steel-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
steel-utils.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Concurrency
parking_lot.workspace = true

# Logging
log.workspace = true

# Networking
reqwest.workspace = true

# Cryptography
rsa.workspace = true
rsa-der.workspace = true
rand.workspace = true
base64.workspace = true
