[package]
name = "steel-login"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
steel-core.workspace = true
steel-protocol.workspace = true
steel-registry.workspace = true
steel-utils.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
base64.workspace = true

# Concurrency
crossbeam.workspace = true
parking_lot.workspace = true

# UUID
uuid.workspace = true

# Logging
log.workspace = true

# Networking
reqwest.workspace = true

# Cryptography
rsa.workspace = true
sha1.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

[lints]
workspace = true
