[package]
name = "steel-protocol"
version.workspace = true
edition.workspace = true


[dependencies]
aes = "0.9.0-rc.2"
async-compression = { version = "0.4.36", features = ["tokio", "zlib"] }
steel-utils = { path = "../steel-utils" }
tokio.workspace = true
thiserror.workspace = true
cfb8 = "0.9.0-rc.1"
take_mut = "0.2.2"
steel-macros = { path = "../steel-macros" }
serde.workspace = true
serde_json.workspace = true
steel-registry = { path = "../steel-registry" }
uuid.workspace = true
crossbeam.workspace = true
log.workspace = true
simdnbt.workspace = true
rustc-hash.workspace = true
