[package]
name = "steel-registry"
version.workspace = true
edition.workspace = true
build = "build/build.rs"

[dependencies]
# Internal crates
steel-utils.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Data structures
rustc-hash.workspace = true

# Logging
log.workspace = true

[build-dependencies]
# Internal crates
steel-utils.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures
rustc-hash.workspace = true

# Utilities
heck.workspace = true

[features]
fmt = []
minecraft-src = []
