[package]
name = "steel-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build/build.rs"

[dependencies]
# Internal crates
steel-utils.workspace = true
steel-macros.workspace = true

# UUID
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Data structures
rustc-hash.workspace = true

# Logging
log.workspace = true
# Utils
rand.workspace = true
text_components.workspace = true
# NBT
simdnbt.workspace = true

[build-dependencies]
# Internal crates
steel-utils.workspace = true

# UUID
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures
rustc-hash.workspace = true

# Utilities
heck.workspace = true

[features]
fmt = []
minecraft-src = []
