[package]
name = "steel-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build/build.rs"

[dependencies]
# Internal crates
steel-utils.workspace = true

# UUID
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Data structures
glam.workspace = true
rustc-hash.workspace = true

# Logging
log.workspace = true
# Utils
rand.workspace = true
text_components.workspace = true
# NBT
simdnbt.workspace = true
tracing.workspace = true

[build-dependencies]
# Internal crates
steel-utils.workspace = true

# UUID
uuid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures
rustc-hash.workspace = true

# Utilities
heck.workspace = true

# NBT parsing for structure templates
simdnbt.workspace = true
flate2.workspace = true

[features]
fmt = []
minecraft-src = []
test-utils = []

[lints]
workspace = true
