[package]
name = "steel-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build/build.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
simdnbt.workspace = true
wincode.workspace = true

# Concurrency
parking_lot.workspace = true

# Data structures
rustc-hash.workspace = true
bitflags.workspace = true
phf.workspace = true

# UUID
uuid.workspace = true

# Logging
log.workspace = true

# Cryptography
md5.workspace = true
crc32c = "0.6"

# Utilities
enum_dispatch.workspace = true
num-traits.workspace = true
text_components.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
# Serialization
serde_json.workspace = true
# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures

rustc-hash.workspace = true
phf_codegen.workspace = true

# Utilities

heck.workspace = true
text_components = { workspace = true, features = ["build"] }
[[bench]]
name = "xoroshiro"
harness = false

[[bench]]
name = "legacy_random"
harness = false

[lints]
workspace = true
