[package]
name = "steel-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build/build.rs"

[dependencies]
steel-macros.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
simdnbt.workspace = true
wincode.workspace = true

# Concurrency
parking_lot.workspace = true

# Data structures
bitflags.workspace = true
phf.workspace = true
rustc-hash.workspace = true
glam.workspace = true

# UUID
uuid.workspace = true

# Logging
tracing.workspace = true

# Cryptography
crc32c = "0.6"

# Utilities
enum_dispatch.workspace = true
num-traits.workspace = true
text_components.workspace = true

# Code generation (build-time only, used by transpiler)
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }

[features]
codegen = ["dep:proc-macro2", "dep:quote"]

[dev-dependencies]
criterion.workspace = true
md5.workspace = true

[build-dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures
phf_codegen.workspace = true

# Utilities
heck.workspace = true
text_components = { workspace = true, features = ["build"] }

[[bench]]
name = "xoroshiro"
harness = false

[[bench]]
name = "legacy_random"
harness = false

[lints]
workspace = true
