[package]
name = "steel-world"
version.workspace = true
edition.workspace = true

[dependencies]
steel-utils = { path = "../steel-utils" }
steel-protocol = { path = "../steel-protocol" }
steel-registry = { path = "../steel-registry" }
scc.workspace = true
uuid.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
log.workspace = true