[package]
name = "steel-worldgen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build/build.rs"

[dependencies]
# Internal crates
steel-registry.workspace = true
steel-utils.workspace = true
steel-math.workspace = true

# Data structures
rustc-hash.workspace = true

[build-dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macros
proc-macro2.workspace = true
quote.workspace = true

# Data structures
rustc-hash.workspace = true

[lints]
workspace = true

[features]
fmt = []
