[package]
name = "steel"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
steel-core.workspace = true
steel-login.workspace = true
steel-protocol.workspace = true
steel-registry.workspace = true
steel-utils.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_json5.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Concurrency
crossbeam.workspace = true
parking_lot = { workspace = true, features = [
    "deadlock_detection",
], optional = true }
scc.workspace = true

# UUID
uuid.workspace = true

# Logging
log.workspace = true
simplelog.workspace = true

# Networking
reqwest.workspace = true

# Cryptography
rand.workspace = true
rsa.workspace = true
rsa-der.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
text_components.workspace = true

# Memory
mimalloc = { version = "0.1.48", optional = true }

# Profiling
dhat = { version = "0.3", optional = true }

[lints]
workspace = true

[features]
default = ["mimalloc"]
stand-alone = []
deadlock_detection = ["dep:parking_lot"]
dhat-heap = ["dhat"]
mimalloc = ["dep:mimalloc"]
